# Project

./: README.md  camera_streamer  object_detector  segmentation
msg/: BoundingBox_msg.txt  DetectionList_msg.txt
perception_stack/: CMakeLists.txt  package.xml
perception_stack/config/: perception_visualization.rviz
perception_stack/launch/: perception_stack.launch
perception_stack/msg/: TrackedObject.msg  TrackedObjectList.msg
perception_stack/scripts/: camera_streamer.py  fusion_node.py  object_tracking.py  optical_flow.py  semantic_segmentation.py
